    ADDED: searcher is able to search content on remote URLs
    ADDED: panel splitter shows the percent values at moving
    ADDED: Copy/Move: preserve all attributes (time, owner, group)
    ADDED: viewer, print + copy actions
    ADDED: new krarc (password handling, type autodetection, writing
           out archiver error messages, step into hidden archives,...)

    FIXED: URL duplication is disabled in the virtual URL collection
    FIXED: cut/copy/paste also works for virtual URLs
    FIXED: [ 1483172 ] crash at refreshing the view during rename
    FIXED: [ 1144729 ] Krusader doesn't remember popup panel splitter position
    FIXED: [ 1479034 ] Crashes after clicking home button, when quicksearch is
           active (patch by Heiner Eichmann)
    FIXED: wrong character set is used on the radial map labels
    FIXED: TC style rename does not work with "Obey KDE's global selection policy"
    FIXED: [ 1189341 ] minimize to tray problems with GNOME
    FIXED: set duplicate exclusion and maximum count for all KHistoryCombos
    FIXED: [ 984936 ] Wrong file cursor position when entering protected directory
    FIXED: [ 1232507 ] panel focus change problems at using the keyboard
    FIXED: bookmark separators get corrupted after adding a new bookmark
    FIXED: [ 1116161 ] more detailed error message at opening FTP URLs  via HTTP proxy
    FIXED: [ 1103646 ] MountMan exits after umount and a fast click on the device
    FIXED: single click doesn't work in TC selection mode
    FIXED: disk usage crash at deleting files
    FIXED: valgrind: Free Memory Read          - KMountManGUI::clicked()
    FIXED: valgrind: Free Memory Read          - SynchronizerGUI::loadFromProfile()
    FIXED: valgrind: Free Memory Read          - RadialMap::Widget::paintExplodedLabels()
    FIXED: valgrind: Free Memory Read          - DULines::slotChanged()
    FIXED: valgrind: Free Memory Read          - DULines::slotDeleted()