@@ -18,6 +18,7 @@
     ADDED: new krarc (password handling, type autodetection, writing
            out archiver error messages, step into hidden archives,...)
 
+    FIXED: cannot close Krusader when "menubar on top of the screen" is chosen
     FIXED: URL duplication is disabled in the virtual URL collection
     FIXED: cut/copy/paste also works for virtual URLs
     FIXED: [ 1483172 ] crash at refreshing the view during rename
